:lipstick: Increase Header z-index to make sure it's always on top

--- a/public/styles/main.styl
+++ b/public/styles/main.styl
@@ -46,7 +46,7 @@ button
 #header
 	max-height: 100vh
 	padding: 1.5rem 2rem
-	z-index: 100
+	z-index: 1000000000
 
 	+mq($from: "small")
 		padding: 4.5rem 8rem 2rem
